--- a/credit_card.ipynb
+++ b/credit_card.ipynb
@@ -6795,7 +6795,8 @@
     }
    ],
    "source": [
-    "fill_data['occyp_type']=label_encoder.fit_transform(fill_data['occyp_type'])"
+    "fill_data['occyp_type']=label_encoder.fit_transform(fill_data['occyp_type'])\n",
+    "#결측치 없는 데이터 중 occyp_type를 라벨링"
    ]
   },
   {
@@ -7020,7 +7021,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_encoded=label_encoder.inverse_transform(fill_data['occyp_type'])"
+    "y_encoded=label_encoder.inverse_transform(fill_data['occyp_type'])\n",
+    "#라벨링한 것을 원상복구"
    ]
   },
   {
@@ -7097,7 +7099,7 @@
     "from sklearn import linear_model \n",
     "lin_reg = linear_model.LinearRegression()\n",
     "x=fill_data[fill_data.columns.drop(['index','occyp_type','DAYS_EMPLOYED','credit'])]\n",
-    "y=fill_data['occyp_type']\n",
+    "y=fill_data['occyp_type']#라벨링 상태\n",
     "lin_reg_model = lin_reg.fit(x, y)"
    ]
   },
@@ -7109,7 +7111,7 @@
    "source": [
     "x_test=null_data[fill_data.columns.drop(['index','occyp_type','DAYS_EMPLOYED','credit'])]\n",
     "y_test=null_data['occyp_type']\n",
-    "y_test=lin_reg.predict(x_test)"
+    "y_test=lin_reg.predict(x_test)#결측치가 있는 데이터에 대입"
    ]
   },
   {
@@ -7440,9 +7442,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -7463,7 +7463,7 @@
     }
    ],
    "source": [
-    "print(y[:10]) #laborers:8,6:high skill tech staff,7:it_staff"
+    "print(y[:10]) "
    ]
   },
   {
@@ -7486,10 +7486,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Laborers                 4512\n",
+       "inocc                    4438\n",
+       "Core staff               2646\n",
+       "Sales staff              2539\n",
+       "Managers                 2167\n",
+       "Drivers                  1575\n",
+       "High skill tech staff    1040\n",
+       "Accountants               902\n",
+       "Medicine staff            864\n",
+       "Cooking staff             457\n",
+       "Security staff            424\n",
+       "Cleaning staff            403\n",
+       "Private service staff     243\n",
+       "Low-skill Laborers        127\n",
+       "Waiters/barmen staff      124\n",
+       "Secretaries                97\n",
+       "Realty agents              63\n",
+       "HR staff                   62\n",
+       "IT staff                   41\n",
+       "Name: occyp_type_enc, dtype: int64"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fill_data['occyp_type_enc'].value_counts()\n",
+    "#laborers:8,6:high skill tech staff,7:it_staff"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 80,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -7641,7 +7679,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full['occyp_type']=full['occyp_type_enc']"
+    "full['occyp_type']=full['occyp_type_enc']#원상복귀"
    ]
   },
   {
