일부 주석 변경

--- a/credit_card(modeling).ipynb
+++ b/credit_card(modeling).ipynb
@@ -11641,7 +11641,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc = StandardScaler()#정규화\n",
+    "sc = StandardScaler()#표준화\n",
     "x_train_df=train_x.copy()\n",
     "y_train_df=train_y.copy()\n",
     "\n",
@@ -11708,7 +11708,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 정규화"
+    "### 표준화"
    ]
   },
   {
@@ -11757,7 +11757,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#xgboost(정규화)\n",
+    "#xgboost(표준화)\n",
     "folds = StratifiedKFold(n_splits=5, shuffle=True, random_state=55)\n",
     "        \n",
     "outcomes = []\n",
@@ -11797,7 +11797,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 정규화x"
+    "### 표준화x"
    ]
   },
   {
@@ -11814,7 +11814,7 @@
     }
    ],
    "source": [
-    "#xgboost(정규화x)\n",
+    "#xgboost(표준화x)\n",
     "folds = StratifiedKFold(n_splits=5, shuffle=True, random_state=55)\n",
     "        \n",
     "outcomes = []\n",
@@ -11865,7 +11865,7 @@
     }
    ],
    "source": [
-    "#정규화x\n",
+    "#표준화x\n",
     "X_train, X_val, y_train, y_val = train_test_split(train_x, train_y,stratify=train_y, test_size=0.25) \n",
     "                                                    \n",
     "print(\"Train set: \")\n",
@@ -11974,7 +11974,7 @@
     }
    ],
    "source": [
-    "#정규화 후\n",
+    "#표준화 후\n",
     "X_train, X_val, y_train, y_val = train_test_split(x_train, train_y,stratify=train_y, test_size=0.25) \n",
     "                                                    \n",
     "print(\"Train set: \")\n",
@@ -11998,7 +11998,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#lightgbm\n",
     "folds = StratifiedKFold(n_splits=5, shuffle=True, random_state=55)\n",
     "        \n",
     "outcomes = []\n",
@@ -12050,11 +12049,11 @@
    "metadata": {},
    "source": [
     "- XGBOOST(k-fold 기준)\n",
-    " - 정규화:0.7554255586533906  \n",
-    " - 정규화x:0.7554281170524562 (k-fold 기준)\n",
+    " - 표준화:0.7554255586533906  \n",
+    " - 표준화x:0.7554281170524562 (k-fold 기준)\n",
     "- LightGBM(k-fold 기준)\n",
-    " - 정규화: 0.760487002427386\n",
-    " - 정규화x:0.7602560039804878"
+    " - 표준화: 0.760487002427386\n",
+    " - 표준화x:0.7602560039804878"
    ]
   },
   {
